[project]
name = "safe-simple-gymnasium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Lu", email = "lu.michael@outlook.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gymnasium[classic-control]==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
